[gd_scene load_steps=17 format=3 uid="uid://dsqoearn6gbw1"]

[ext_resource type="Script" path="res://extensao/Scripts/controllers/Controller.gd" id="1_fvokr"]
[ext_resource type="Texture2D" uid="uid://21aa2h1pm3vn" path="res://assets/foto/imagensCenas/fotor-20241201204611.png" id="2_57kk6"]
[ext_resource type="FontFile" uid="uid://cw0k3asjt5pbi" path="res://extensao/assets/sprits/Minecraft.ttf" id="3_5r2qn"]
[ext_resource type="AudioStream" uid="uid://dp5cmdip6kodx" path="res://extensao/assets/audio/correct-6033.wav" id="3_bcccr"]
[ext_resource type="StyleBox" uid="uid://c27rxa5hnuggv" path="res://assets/styles/botaoquiz.tres" id="4_csk8y"]
[ext_resource type="AudioStream" uid="uid://b16pk5a0f401" path="res://extensao/assets/audio/error-10-206498.wav" id="4_sjxle"]
[ext_resource type="Texture2D" uid="uid://efxrcy3cudn3" path="res://extensao/resources/folclore/fotor-2024120122289 (1).jpg" id="5_yw4i1"]
[ext_resource type="Texture2D" uid="uid://crmppq27vmyhe" path="res://assets/foto/imagensCenas/file (4) (1).png" id="7_8af4s"]
[ext_resource type="Texture2D" uid="uid://dukv5023xwqc7" path="res://assets/foto/imagensCenas/Sonia_Cuca_Cave_PixelArt (1).png" id="7_8b1hp"]
[ext_resource type="FontFile" uid="uid://7hk4yohut66b" path="res://assets/foto/Minecraft.ttf" id="9_i6ppe"]
[ext_resource type="Texture2D" uid="uid://beths2vx8gfbi" path="res://assets/foto/imagensCenas/DALLÂ·E-2024-12-01-11.06 (1).png" id="10_p3ei0"]
[ext_resource type="AudioStream" uid="uid://bv7y7a2w2x36e" path="res://assets/sound/videogame-death-sound-43894.mp3" id="10_sf17o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vb0t"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vyk4e"]
texture = ExtResource("10_p3ei0")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mhh0r"]
texture = ExtResource("10_p3ei0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hpe2s"]
texture = ExtResource("10_p3ei0")

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_fvokr")
color_right = Color(0.0888448, 0.270152, 0, 1)
color_wrong = Color(0.43, 0.0473, 0.0600567, 1)

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00566115, 0.00566115, 0.00566115, 1)

[node name="TextureRect" type="TextureRect" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_57kk6")

[node name="QuestionInfo" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -547.0
offset_top = 60.0
offset_right = -44.0
offset_bottom = 744.0
grow_horizontal = 2

[node name="ImageHolder" type="Panel" parent="Content/QuestionInfo"]
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="Content/QuestionInfo/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 48.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuestionVideo" type="VideoStreamPlayer" parent="Content/QuestionInfo/ImageHolder"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 92.0
offset_right = -2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="QuestionAudio" type="AudioStreamPlayer" parent="Content/QuestionInfo/ImageHolder"]

[node name="QuestionHolder" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -527.0
offset_top = -319.0
offset_right = -41.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonOption1" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5r2qn")
theme_override_styles/hover = ExtResource("4_csk8y")
theme_override_styles/pressed = ExtResource("4_csk8y")
theme_override_styles/normal = ExtResource("4_csk8y")

[node name="ButtonOption2" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5r2qn")
theme_override_styles/hover = ExtResource("4_csk8y")
theme_override_styles/pressed = ExtResource("4_csk8y")
theme_override_styles/normal = ExtResource("4_csk8y")

[node name="ButtonOption3" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5r2qn")
theme_override_styles/hover = ExtResource("4_csk8y")
theme_override_styles/pressed = ExtResource("4_csk8y")
theme_override_styles/normal = ExtResource("4_csk8y")

[node name="ButtonOption4" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_5r2qn")
theme_override_styles/hover = ExtResource("4_csk8y")
theme_override_styles/pressed = ExtResource("4_csk8y")
theme_override_styles/normal = ExtResource("4_csk8y")

[node name="ColorRect" type="ColorRect" parent="Content"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -501.0
offset_top = 91.0
offset_right = -85.0
offset_bottom = 649.0
grow_horizontal = 0
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="QuestionText" type="Label" parent="Content/ColorRect"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_5r2qn")
theme_override_font_sizes/font_size = 35
text = "Pergunta
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Content"]
layout_mode = 0
offset_left = 62.0
offset_top = 94.0
offset_right = 520.0
offset_bottom = 446.0
texture = ExtResource("5_yw4i1")

[node name="gameover" type="ColorRect" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0214346, 0.0214346, 0.0214346, 1)

[node name="TextureRect" type="TextureRect" parent="Content/gameover"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -24.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_8b1hp")

[node name="TextureRect2" type="TextureRect" parent="Content/gameover"]
layout_mode = 0
offset_left = 26.0
offset_top = 28.0
offset_right = 570.0
offset_bottom = 240.0
texture = ExtResource("7_8af4s")

[node name="ButtonGameOver" type="Button" parent="Content/gameover"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -144.0
offset_right = -62.0
offset_bottom = -45.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_i6ppe")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_4vb0t")
theme_override_styles/hover = SubResource("StyleBoxTexture_vyk4e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mhh0r")
theme_override_styles/normal = SubResource("StyleBoxTexture_hpe2s")
text = "Jogar 
Novamente
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Content/gameover"]
stream = ExtResource("10_sf17o")

[node name="AudioCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bcccr")

[node name="AudioIncorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sjxle")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="Content/gameover/ButtonGameOver" to="." method="_on_button_game_over_pressed"]
